# EDGAR-Streamlit-App

./: API_endpoints.py  README.md  can_heading_data.csv  can_steering_data.csv  dashboard.py  fake_auth.py  file_sensor_data.csv  helper_functions.py  models.py  pyproject.toml  rides.csv  samples.csv  scenes.csv
data/database_csv_2/: calibrated_sensor.csv  can_motion_data.csv  can_wheelspeed_data.csv  gps_data.csv
database_csv_1/: calibrated_sensor.csv  file_sensor_data.csv  gps_data.csv  rides.csv  samples.csv  scenes.csv  sensor_data.csv
database_csv_3/: calibrated_sensor.csv  can_misc_data.csv  file_sensor_data.csv  gps_data.csv  imu_data.csv  rides.csv  samples.csv  scenes.csv  sensor_data.csv
generated_client/fast_api_client/api/default/: get_gps_data_dashboard_gps_get.py  get_ride_data_dashboard_ride_name_get.py  list_ride_dashboard_rides_get.py
