[project]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = [
    {name = "onarled",email = "leonard.berthellemy@polytechnique.edu"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "openapi-python-client (>=0.23.1,<0.24.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
